--- a/src/scss/index.scss
+++ b/src/scss/index.scss
@@ -18,3 +18,33 @@ body {
   width: 100%;
   height: 100%;
 }
+
+button {
+  &:focus {
+    outline: none;
+  }
+
+  &:hover {
+    cursor: pointer;
+  }
+}
+
+.fsAbsolute {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+}
+
+.absoluteCenter {
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hidden {
+  display: none;
+  visibility: hidden;
+}
