--- a/src/scss/debug.scss
+++ b/src/scss/debug.scss
@@ -67,3 +67,5 @@ body {
   font-family: Roboto Mono, Source Code Pro, Menlo, Courier, monospace;
   font-size: 10px;
 }
+
+@import 'sceneHierarchy';
