--- a/src/scss/_sceneHierarchy.scss
+++ b/src/scss/_sceneHierarchy.scss
@@ -37,7 +37,7 @@ $maxHeight: calc($barHeight * 10);
 
     .refresh {
       background-color: transparent;
-      background-image: url("../../public/images/debug/icon_refresh.png");
+      background-image: url("/images/debug/icon_refresh.png");
       background-size: 20px 20px;
       opacity: 0.7;
       transform: translateY(-50%) scale(0.8);
@@ -95,7 +95,7 @@ $maxHeight: calc($barHeight * 10);
         height: calc($barHeight - 1px);
         width: calc($barHeight - 1px);
         position: absolute;
-        background-image: url("../../public/images/debug/icon_folder.png");
+        background-image: url("/images/debug/icon_folder.png");
         background-position-x: 2px;
         background-position-y: 2px;
         background-size: 32px 16px;
@@ -131,7 +131,7 @@ $maxHeight: calc($barHeight * 10);
 
     .icon {
       background-color: transparent;
-      background-image: url("../../public/images/debug/icon_world.png");
+      background-image: url("/images/debug/icon_world.png");
       background-size: 20px 20px;
       display: inline-block;
       position: absolute;
@@ -139,30 +139,31 @@ $maxHeight: calc($barHeight * 10);
       top: 0;
       width: $barHeight;
       height: $barHeight;
+      transform: scale(0.8);
     }
 
     .obj3D {
-      background-image: url("../../public/images/debug/icon_world.png");
+      background-image: url("/images/debug/icon_world.png");
     }
 
     .camera {
-      background-image: url("../../public/images/debug/icon_camera.png");
+      background-image: url("/images/debug/icon_camera.png");
     }
 
     .interactive {
-      background-image: url("../../public/images/debug/icon_interactive.png");
+      background-image: url("/images/debug/icon_interactive.png");
     }
 
     .light {
-      background-image: url("../../public/images/debug/icon_lights.png");
+      background-image: url("/images/debug/icon_lights.png");
     }
 
     .ui {
-      background-image: url("../../public/images/debug/icon_ui.png");
+      background-image: url("/images/debug/icon_ui.png");
     }
 
     .utils {
-      background-image: url("../../public/images/debug/icon_utils.png");
+      background-image: url("/images/debug/icon_utils.png");
     }
   }
 }
