--- a/src/components/editor/scss/_dropdown.scss
+++ b/src/components/editor/scss/_dropdown.scss
@@ -1,3 +1,5 @@
+@use 'theme';
+
 .dropdown {
   color: #FFF;
   display: inline-block;
@@ -44,7 +46,6 @@
 
   ul {
     background-color: $BAR_COLOR;
-    display: block;
     list-style: none;
     margin: 0;
     margin-block: 0;
