--- a/src/components/debug/editor/scss/_dropdown.scss
+++ b/src/components/debug/editor/scss/_dropdown.scss
@@ -10,6 +10,7 @@
   width: max-content;
 
   button {
+    backdrop-filter: blur(2px);
     background-color: $BAR_COLOR;
     color: #FFF;
     padding: 5px 10px;
@@ -17,6 +18,7 @@
     text-align: left;
     min-width: $ROW_HEIGHT;
     width: 100%;
+    transition: background-color 0.2s linear;
 
     &:hover {
       background-color: $BTN_HOVER;
@@ -45,7 +47,6 @@
   }
 
   ul {
-    background-color: $BAR_COLOR;
     list-style: none;
     margin: 0;
     margin-block: 0;
